--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,5 +5,6 @@
 <% else %>
 	<p>
 		<%= button_to "login with Facebook!", user_omniauth_authorize_path(:facebook) %>
+    <%= button_to "login with Twitter!", user_omniauth_authorize_path(:twitter) %>
 	</p>	
 <% end %>
